objects/Competitor__c.object
<CustomObject>
    <description>To capture additional info beyond who the competitor is &amp; linked to an Opportunity</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Competitor Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Information</relationshipLabel>
        <relationshipName>CompetitorOpportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Any_Customer_Concerns__c</fullName>
        <label>Any Customer Concerns?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auto_create_Displacement_Opportunity__c</fullName>
        <inlineHelpText>This will automatically create a displacement Opportunity if the linked Opportunity is Closed Lost</inlineHelpText>
        <label>Auto-create Displacement Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competing_Solution_Area__c</fullName>
        <label>Competing Solution Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Talent Acquisition - Grad</fullName>
                </value>
                <value>
                    <fullName>Talent Acquisition - Volume</fullName>
                </value>
                <value>
                    <fullName>Talent Acquisition - Tech</fullName>
                </value>
                <value>
                    <fullName>Talent Acquisition - Sales</fullName>
                </value>
                <value>
                    <fullName>Talent Acquisition - Professional</fullName>
                </value>
                <value>
                    <fullName>Talent Acquisition - Managerial</fullName>
                </value>
                <value>
                    <fullName>Talent Management - Review</fullName>
                </value>
                <value>
                    <fullName>Talent Management - Mobilize</fullName>
                </value>
                <value>
                    <fullName>Talent Management - Develop</fullName>
                    <isActive>false</isActive>
                    <label>Talent Management - Develop</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Account_ID__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Displacement_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This will be populated once the Opportunity is auto-created</inlineHelpText>
        <label>Competitor Displacement Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitor Displacement Opportunity</relationshipLabel>
        <relationshipName>CompetitorDisplacementOpportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Competitor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Competitor Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Information</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Displacement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Displacement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_View_of_Strengths__c</fullName>
        <label>Customer View of Strengths?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incumbent_Renewal_Date__c</fullName>
        <label>Incumbent Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incumbent_Value__c</fullName>
        <label>Incumbent Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incumbent_Value_in_USD__c</fullName>
        <formula>IF(
TEXT(CurrencyIsoCode) = &apos;USD&apos;, Incumbent_Value__c,  
Incumbent_Value__c / CURRENCYRATE(TEXT(CurrencyIsoCode))*CURRENCYRATE(&apos;USD&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incumbent Value(in USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incumbent_Vendor__c</fullName>
        <label>Incumbent Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>TEXT(Account__r.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Account__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <label>Competitor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Competitor__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Incumbent_Vendor__c</columns>
        <columns>Incumbent_Value__c</columns>
        <columns>Industry__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CMP-{0000000}</displayFormat>
        <label>Competitor Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AutoCreate_Displcmnt_Opp_Cant_be_blank</fullName>
        <active>true</active>
        <description>If the Opportunity field is populated on a competitor entry, Auto-create Displacement Opportunity cannot be blank.</description>
        <errorConditionFormula>AND(
Opportunity__c!=&apos;&apos;,
ISPICKVAL(Auto_create_Displacement_Opportunity__c, &quot;&quot;),
$Profile.Name != &apos;System Administrator&apos;
)</errorConditionFormula>
        <errorDisplayField>Auto_create_Displacement_Opportunity__c</errorDisplayField>
        <errorMessage>Auto-create Displacement Opportunity cannot be blank If an Opportunity is linked to a competitor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Create_Displacement_Opportunity</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL(Incumbent_Vendor__c, &quot;Yes&quot;),
ISPICKVAL(Auto_create_Displacement_Opportunity__c, &quot;&quot;),
NOT(ISNULL( Incumbent_Renewal_Date__c )),
$Profile.Name != &apos;System Administrator&apos;
)</errorConditionFormula>
        <errorDisplayField>Auto_create_Displacement_Opportunity__c</errorDisplayField>
        <errorMessage>Do you want to create a holding opportunity timed to displaced this competitor?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Incumbent_Renewal_Date_Cannot_be_in_Past</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 Incumbent_Renewal_Date__c &lt;TODAY(),
OR(
 ISNEW(),
 ISCHANGED(Incumbent_Renewal_Date__c)
),
$Profile.Name !=&apos;System Administrator&apos;)</errorConditionFormula>
        <errorDisplayField>Incumbent_Renewal_Date__c</errorDisplayField>
        <errorMessage>Incumbent Renewal Date cannot be in past. Please insert valid date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Incumbent_Renewal_Date_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Auto_create_Displacement_Opportunity__c, &quot;Yes&quot;),
OR(ISNULL(Incumbent_Renewal_Date__c),
ISPICKVAL( Incumbent_Vendor__c ,&apos;&apos;),
 Opportunity__c ==&apos;&apos;
),
 $Profile.Name !=&apos;System Administrator&apos;)</errorConditionFormula>
        <errorMessage>Please provide the incumbent competitor&apos;s renewal date, Incumbent vendor and opportunity  to auto create displacement opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Incumbent_Value_required</fullName>
        <active>false</active>
        <description>If Incumbent Vendor = TRUE and related Opportuntiy is NULL create separate validation rule to force Incumbent Value</description>
        <errorConditionFormula>AND(
 ISPICKVAL(Incumbent_Vendor__c,&apos;YES&apos;),
 Opportunity__c=&apos;&apos;,
 ISBLANK(Incumbent_Value__c),
$Profile.Name != &apos;System Administrator&apos;
)</errorConditionFormula>
        <errorDisplayField>Incumbent_Value__c</errorDisplayField>
        <errorMessage>Incumbent Value is required, if incumbent vendor is Yes and no opportunity is linked to the record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Renewal_Date_Requird_if_Vendor_is_Yes</fullName>
        <active>false</active>
        <description>Incumbent renewal date should be mandatory if the Incumbent Vendor is true.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Incumbent_Vendor__c,&apos;YES&apos;),
ISNULL(Incumbent_Renewal_Date__c),
$Profile.Name !=&apos;System Administrator&apos;
)</errorConditionFormula>
        <errorDisplayField>Incumbent_Renewal_Date__c</errorDisplayField>
        <errorMessage>Incumbent Renewal Date is Required if Incumbent vendor is Yes</errorMessage>
    </validationRules>
</CustomObject>